--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ gitignore.io help:
   list    - lists the operating systems, programming languages and IDE input types
   :types: - creates .gitignore files for types of operating systems, programming languages or IDEs
 vendor/
+
+dpg
