--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - checkout
       - run: go get -v -t -d ./...
+      - add_ssh_keys:
+          fingerprints:
+            - "d4:0c:e7:da:b8:f8:c3:93:53:99:24:9b:fa:71:42:d9"
       - run: |
           go build # make sure the version of the used binary
           PATH=$PWD:$PATH ./scripts/update_README.bash
