--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,10 +24,10 @@
 #   go-tests = true
 #   unused-packages = true
 
-[[constraint]]
-  name = "github.com/urfave/cli"
-  version = "1.20.0"
-
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  branch = "v2"
+  name = "gopkg.in/urfave/cli.v2"
