--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,14 @@ jobs:
       - run: |
           go build # make sure the version of the used binary
           PATH=$PWD:$PATH ./scripts/update_README.bash
+  release:
+    <<: *default_env
+    steps:
+      - checkout
+      - run:
+      - run: curl -sL https://git.io/goreleaser | bash
+      - run: go get -v -t -d ./...
+      - run: goreleaser
 
 workflows:
   version: 2
@@ -35,3 +43,11 @@ workflows:
           filters:
             branches:
               only: /master/
+  release_binary:
+    jobs:
+      - release:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
