--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,8 @@
 # This is an example goreleaser.yaml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
-git:
-  short_hash: true
+before:
+  hooks:
+  - go get -v -t -d ./...
 builds:
 - goos:
   - linux
@@ -13,6 +14,7 @@ builds:
 - env:
   - CGO_ENABLED=0
 archive:
+  name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
   format_overrides:
     - goos: windows
       format: zip
@@ -34,3 +36,5 @@ changelog:
     - '^test:'
     - '^scripts:'
     - '^fixture:'
+    - Merge pull request
+    - Merge branch
