--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,21 @@ jobs:
     <<: *default_env
     steps:
       - checkout
-      - run: go get -v -t -d ./...
+      - run: &download_dependencies
+          name: Download dependencies
+          command: |
+            if ! type 'dpg' >/dev/null 2>&1; then
+              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            fi
+
+            dep ensure
       - run: go test -v ./...
       - run: ./scripts/make_diff_by_go-fmt
   update_docs:
     <<: *default_env
     steps:
       - checkout
-      - run: go get -v -t -d ./...
+      - run: *download_dependencies
       - add_ssh_keys:
           fingerprints:
             - "d4:0c:e7:da:b8:f8:c3:93:53:99:24:9b:fa:71:42:d9"
@@ -27,6 +34,12 @@ jobs:
     <<: *default_env
     steps:
       - checkout
+      - run:
+          name: Ensure dep
+          command: |
+            if ! type 'dpg' >/dev/null 2>&1; then
+              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            fi
       - run: curl -sL https://git.io/goreleaser | bash
 
 workflows:
