--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,7 +2,7 @@
 # Make sure to check the documentation at http://goreleaser.com
 before:
   hooks:
-  - go get -v -t -d ./...
+  - dep ensure
 builds:
 -
   ldflags:
